# dog-the-bug-hunter

./: .gitignore  Cargo.toml  Makefile  README.md  history.txt  provider_test_config.toml
.cargo/: config.toml
.github/workflows/: api-gateway-release.yml  build.yml  dotenv-disclosure-release.yml  endpoint-enumerator-release.yml  orchestrator-release.yml  release.yml  report-writer-release.yml  sqli-detection-release.yml  surrealdb-release.yml
.github/workflows/api-gateway/: release.yml
.github/workflows/endpoint-enumerator/: release.yml
.github/workflows/report-writer/: release.yml
actors/api-gateway/: Cargo.toml  wasmcloud.toml
actors/api-gateway/.github/workflows/: release.yml
actors/api-gateway/src/: auth.rs  lib.rs
actors/orchestrator/: Cargo.toml  wasmcloud.toml
actors/orchestrator/.github/workflows/: release.yml
actors/orchestrator/src/: lib.rs
actors/report-writer/: Cargo.toml  wasmcloud.toml
actors/report-writer/.github/workflows/: release.yml
actors/report-writer/src/: lib.rs
actors/scanner-modules/dotenv-disclosure/: Cargo.toml  wasmcloud.toml
actors/scanner-modules/dotenv-disclosure/.github/workflows/: release.yml
actors/scanner-modules/dotenv-disclosure/src/: lib.rs
actors/scanner-modules/scanner-template/: .gitignore  Cargo.toml  wasmcloud.toml
actors/scanner-modules/scanner-template/src/: lib.rs
actors/scanner-modules/sqli-detection/: Cargo.toml  wasmcloud.toml
actors/scanner-modules/sqli-detection/.github/workflows/: release.yml
actors/scanner-modules/sqli-detection/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
docker/: docker-compose.yml
interfaces/dtbh/: .gitignore  api.smithy  codegen.toml  common.smithy  endpoint-enumerator-interface.smithy  http_endpoint_scanner.smithy  orchestrator.smithy  report_writer.smithy
interfaces/dtbh/rust/: Cargo.toml
interfaces/dtbh/rust/src/: api.rs  common.rs  endpoint_enumerator.rs  http_endpoint_scanner.rs  lib.rs  orchestrator.rs  report_writer.rs
interfaces/endpoint-enumerator/: codegen.toml  endpoint-enumerator-interface.smithy
interfaces/endpoint-enumerator/rust/: Cargo.toml
interfaces/endpoint-enumerator/rust/src/: enumerator.rs  lib.rs
interfaces/surrealdb/: README.md  codegen.toml  surrealdb.smithy
interfaces/surrealdb/rust/: Cargo.toml
interfaces/surrealdb/rust/src/: lib.rs  surrealdb_interface.rs
migrations/: 20230406080932_create_reports.sql
providers/.cargo/: config.toml
providers/endpoint-enumerator/: Cargo.toml  Makefile  README.md
providers/endpoint-enumerator/.github/workflows/: release.yml
providers/endpoint-enumerator/src/: common_ports.rs  dns_resolver.rs  main.rs  port_scanner.rs  subdomains.rs
providers/endpoint-enumerator/tests/: enumerator_test.rs
providers/endpoint-enumerator/tests/docker/: docker-compose.yml
providers/surrealdb/: Cargo.toml  Makefile  README.md  provider_test_config.toml
providers/surrealdb/.github/workflows/: release.yml
providers/surrealdb/src/: auth.rs  config.rs  main.rs  response.rs
providers/surrealdb/tests/: surrealdb_test.rs  utils.rs
providers/surrealdb/tests/docker/: docker-compose.yml
scripts/: init_db.sh
src/: common_ports.rs  main.rs  port_scanner.rs  subdomains.rs
surql/: setup.surql  test.surql
surrealdb/: fly.toml
tests/: enumerator_test.rs  sleepy_test.rs  utils.rs
tests/docker/: Dockerfile
