[package]
name = "wasmcloud-provider-sleepy"
version = "0.1.0"
edition = "2021"
resolver = "2"
repository = "https://github.com/jclmnop/wasmcloud-sleepy-provider"

[dependencies]
tokio = { version = "1", features = [ "full" ] }
futures = "0.3.27"
async-trait = "0.1"
tracing = "0.1.37"
wasmbus-rpc = "0.12.0"
wasmcloud-interface-sleepy = "0.1.0"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.7.0"

[[bin]]
name = "sleepy"
path = "src/main.rs"
