[workspace]
members = [
  "./actors/scanner-modules/*",
  "./actors/orchestrator",
  "./actors/report-writer",
  "./actors/api-gateway",
  "./interfaces/*/rust",
]
exclude = [
  "./providers/sleepy",
  "./providers/endpoint-enumerator",
]

[workspace.package]
version = "0.1.0"
authors = ["jclmnop"]
edition = "2021"
description = "My entry to the Cosmonic Hackathon, a scalable automated vulnerability scanning service."

[workspace.dependencies]
anyhow = "1.0.70"
async-trait = "0.1.67"
futures = "0.3"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
wasmbus-rpc = "0.11.1"
wasmcloud-interface-httpserver = "0.9.0"
wasmcloud-interface-numbergen = "0.8.1"
wasmcloud-interface-logging = "0.8.1"
wasmcloud-interface-keyvalue = "0.9.1"
wasmcloud-interface-blobstore = "0.5.1"
wasmcloud-interface-messaging = "0.8.1"
wasmcloud-interface-httpclient = "0.8.1"
dtbh_interface = { path = "interfaces/dtbh/rust" }
wasmcloud-interface-sleepy = { path = "interfaces/sleepy/rust" }
tracing = "0.1.37"

# Dev Dependencies
base64 = "0.21.0"
webassembly-test = "0.1.0"

# Build Dependencies
weld-codegen = "0.7.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
