[package]
name = "dtbh-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking", "json", "cookies"] }
colored = "2.0.0"
clap = { version = "4.2.2", features = ["derive"] }
serde_json = "1.0.96"
anyhow = "1.0.70"
dirs = "5.0.0"
wasmbus-rpc = "0.13.0"
chrono = "0.4.24"
colored_json = "3.1.0"
