[package]
name = "orchestrator"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "orchestrator"

[dependencies]
anyhow.workspace = true
futures.workspace = true
async-trait.workspace = true
wasmbus-rpc.workspace = true
wasmcloud-interface-logging.workspace = true
wasmcloud-interface-messaging.workspace = true
dtbh_interface.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
base64.workspace = true
webassembly-test.workspace = true

