[package]
name = "wasmcloud-provider-endpoint-enumerator"
version = "0.1.1"
edition = "2021"
resolver = "2"
#repository = "https://github.com/jclmnop/wasmcloud-sleepy-provider"
license-file = "LICENSE"
readme = "README.md"
authors = ["jclmnop"]

[dependencies]
tokio = { version = "1", features = [ "full" ] }
tokio-stream = "0.1.12"
url = "2.3.1"
regex = "1.7.3"
futures = "0.3.27"
async-trait = "0.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
reqwest = { version = "0.11.16", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.159", features = ["derive"] }
trust-dns-resolver = "0.22.0"
wasmbus-rpc = { version = "0.11.1", features = ["otel"] }
dtbh_interface = { path = "../../interfaces/dtbh/rust" }
anyhow = "1.0.70"
serde_json = "1.0.95"


# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.7.0"
env_logger = "0.10.0"
wasmbus-rpc = "0.12.0"

[[bin]]
name = "wasmcloud-provider-endpoint-enumerator"
path = "src/main.rs"
