[package]
name = "wasmcloud-provider-surrealdb"
version = "0.1.0"
edition = "2021"
resolver = "2"
#repository = "https://github.com/jclmnop/wasmcloud-sleepy-provider"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = [ "full" ] }
futures = "0.3.27"
async-trait = "0.1"
tracing = "0.1.37"
wasmbus-rpc = "0.13.0"
wasmcloud-interface-surrealdb = "0.1.0"
surrealdb = "1.0.0-beta.9" # features?
serde = "1.0.159"
serde_json = "1.0.95"
anyhow = "1.0.70"
indexmap = "1.9.3"
base64 = "0.21.0"

[dev-dependencies]
wasmcloud-test-util = "0.8.0"
env_logger = "0.10.0"

[[bin]]
name = "wasmcloud-provider-surrealdb"
path = "src/main.rs"
