[package]
name = "wasmcloud-interface-surrealdb"
version = "0.1.0"
description = "Interface for interacting with a surreal-db provider."
authors = ["jclmnop"]
edition = "2021"
#repository = "https://github.com/jclmnop/wasmcloud-interface-sleepy"
license = "Apache-2.0"
readme = "../README.md"

# when publishing to crates.io, freeze src by omitting build.rs
exclude = [ "build.rs" ]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.68"
serde = "1.0.159"
serde_bytes = "0.11.5"
wasmbus-rpc = "0.13.0"

# build-dependencies needed for build.rs
[build-dependencies]
weld-codegen = "0.7.0"

